private_server/guard/CELL-55/Q-4/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-55/Q-4/55-4.py", line 2
    number = 12
         ^
IndentationError: expected an indented block
